Antigravity用のルール設定

--- a/.agent/rules/.tdd.md
+++ b/.agent/rules/.tdd.md
@@ -14,11 +14,11 @@ description: テスト駆動開発での実装
 
 #### 2.1 機能要件と仕様
 
-  * **対象タスク:** [**細分化されたタスク名**を記入]
-  * **親機能名:** [**上位機能名**を記入]
-  * **メニュー順序:** [**数字**を記入]
-  * **ルーティングパス:** `src/app/([メニュー順序]-[親機能名])/page.tsx`
-  * **詳細要件:** [**このタスクで実現すべき具体的な動作、実装範囲、満たすべきテストシナリオ**を詳細に記述する]
+- **対象タスク:** [**細分化されたタスク名**を記入]
+- **親機能名:** [**上位機能名**を記入]
+- **メニュー順序:** [**数字**を記入]
+- **ルーティングパス:** `src/app/([メニュー順序]-[親機能名])/page.tsx`
+- **詳細要件:** [**このタスクで実現すべき具体的な動作、実装範囲、満たすべきテストシナリオ**を詳細に記述する]
 
 #### 2.2 コロケーション構造の定義
 
