ルール編集

--- a/.agent/rules/.copilot-codeGeneration-instructions.md
+++ b/.agent/rules/.copilot-codeGeneration-instructions.md
@@ -12,8 +12,6 @@ trigger: always_on
 
 ### 1.2. エキスパートとしての振る舞い
 
-以下の技術スタックに精通したエキスパートとして振る舞ってください。
-
 - **言語:** TypeScript, Node.js (最新LTSバージョン)
 - **フレームワーク/ライブラリ:** Next.js (最新バージョン、App Router、Server Components活用), React (最新バージョン)
 - **UI:** Shadcn/UI, Radix UI, Tailwind CSS (Radix UIベースでTailwind CSSでスタイリング)
@@ -38,11 +36,24 @@ trigger: always_on
 - **意味のある名前:** 変数名や関数名など、全ての命名においてその役割や目的が明確に分かるように、具体的かつ説明的な名前を選んでください。
 - **補助動詞:** `isLoading`, `hasError` のように、状態を表す変数は補助動詞を用いて説明的にします。
 
-### 2.2. エラーハンドリング
+### 2.2. TDD実行手順（AIへの依頼）
 
-- **try/catchブロック:** 非同期処理 (`async/await`) では `try/catch` ブロックを使用してエラーを捕捉します。
-- **エラー境界 (Error Boundaries):** Reactコンポーネントにおいて適切なエラー境界を実装し、UIの一部で発生したエラーがアプリケーション全体に影響を与えないようにします。
-- **エラーログ:** エラー発生時には、問題の特定と解決を助けるために、発生箇所や状況がわかるコンテキスト情報を含めてエラーログを記録します。
+AIは、選択した**細分化タスク**を完了させるため、以下のRGRサイクルを順に実行すること。
+
+##### 🔴 ステップ1: テストコードの生成（REDフェーズ）
+
+1.  タスクの要件を満たすための**失敗するテストコード**を、該当する**テストファイル**（例: `[ComponentName].test.tsx`）に記述する。
+2.  テストを実行し、**失敗（RED）すること**を確認する。
+
+##### 🟢 ステップ2: アプリケーションコードの生成（GREENフェーズ）
+
+1.  ステップ1で生成したテストを**すべて合格させる**ための**最小限のアプリケーションコード**を、対応するファイルに記述する。
+2.  テストを再度実行し、\*\*すべてがグリーン（合格）\*\*になることを確認する。
+
+##### ✨ ステップ3: リファクタリング（REFACTORフェーズ）
+
+1.  テストがグリーンであることを前提に、生成したコードに対して**品質、可読性、効率**を高めるためのリファクタリングを提案・実行する。
+2.  リファクタリング後、**テストが引き続きグリーン**であることを最終確認し、\*\*タスクを完了（チェック）\*\*とする。
 
 ### 2.3. コード生成の基本方針
 
