サンプルページの追加

--- a/.agent/rules/.copilot-codeGeneration-instructions.md
+++ b/.agent/rules/.copilot-codeGeneration-instructions.md
@@ -40,6 +40,17 @@ trigger: always_on
 
 AIは、選択した**細分化タスク**を完了させるため、以下のRGRサイクルを順に実行すること。
 
+#### テストファイル命名規則
+
+view関連のテストファイル名
+
+\_.test.tsx
+
+ビジネスロジックやfetchのテストファイル名
+\_.test.ts
+
+- テストファイルは、テストするコンポーネントやロジックと同じディレクトリに配置し、関連性を明確にします。
+
 ##### 🔴 ステップ1: テストコードの生成（REDフェーズ）
 
 1.  タスクの要件を満たすための**失敗するテストコード**を、該当する**テストファイル**（例: `[ComponentName].test.tsx`）に記述する。
