refactor(profile-list): コードの整形と可読性向上
プロファイルリストコンポーネントのコードを整形し、可読性を向上させた。

--- a/.agent/rules/.copilot-codeGeneration-instructions.md
+++ b/.agent/rules/.copilot-codeGeneration-instructions.md
@@ -25,9 +25,62 @@ trigger: always_on
 - **API:** Hono (最新バージョン、Node.jsバックエンドで高速なAPIを提供)
 - **その他/ツール:** nuqs（URLパラメーターによる状態同期に活用）
 
-## 2. プロジェクト全体のコーディング規約
+## 2. AIコーディング規範
 
-### 2.1. 命名規則
+### 目的
+
+AIは、本規範に厳格に従い、**不変性、予測可能性、そして完全なテスト容易性**を確保したコードを生成すること。例外処理は型システムで強制し、ランタイムエラーの発生を最小限に抑える。
+
+### 2.1. 構造とモジュール化のルール (Modularity & Architecture)
+
+| No.     | 必須ルール              | 詳細（AIへの指示）                                                                                                                                        |
+| :------ | :---------------------- | :-------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **I-1** | **テストの最重要性**    | **結合テスト**が最も重要であり、全ての機能は厳格なテストの下で実装されること。                                                                            |
+| **I-2** | **インポート管理**      | `require` および 一般的な `import` 文は禁止。必ず **`import` 宣言**を使用し、eslint-plugin-boundariesに従い、ディレクトリのインポート方向を強制すること。 |
+| **I-3** | **サブパス禁止**        | `import "hoge/sub"` のような深い階層のサブパス import は禁止。常に公開されたパスからインポートすること。                                                  |
+| **I-4** | **Barrel Export 厳守**  | 各ディレクトリには必ず **`index.ts`** ファイルを設置し、そのレイヤーで公開してよいものだけを export すること。                                            |
+| **I-5** | **Index.ts の純粋性**   | `index.ts` は **re-export 以外**のロジック（関数定義など）を記述してはならない。                                                                          |
+| **I-6** | **Default Export 禁止** | `export default` は使用せず、全て **名前付きエクスポート (Named Export)** を使用すること。                                                                |
+
+### 2.2. 機能とデータ処理のルール (Functional & Data Flow)
+
+| No.      | 必須ルール               | 詳細（AIへの指示）                                                                                                                                                    |
+| :------- | :----------------------- | :-------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **II-1** | **クラス禁止**           | `class` の定義は原則禁止。互換性維持など、どうしても必要な場合のみ例外的に許可する。                                                                                  |
+| **II-2** | **Enum 禁止**            | `enum` は絶対に使用しないこと。                                                                                                                                       |
+| **II-3** | **完全な不変性**         | 変数の再代入を防ぐため、**`let` の使用を禁止**し、全ての変数を `const` で宣言すること。オブジェクトや配列の型には必ず **`readonly`** を付与し、不変性を強制すること。 |
+| **II-4** | **Argument Object 強制** | 関数の引数が 2 つ以上になる場合、必ず **単一のオブジェクト（名前付き引数パターン）**として渡すこと。                                                                  |
+| **II-5** | **シャドーイング禁止**   | スコープ外の変数と同じ名前の変数を、内側のスコープで宣言すること（シャドーイング）を禁止する。                                                                        |
+| **II-6** | **マジックバリュー禁止** | コード内に直接、意味の不明瞭な数値や文字列（マジックナンバー、マジックストリング）を記述することを禁止。必ず `const` 定義すること。                                   |
+
+### 2.3. エラーと非同期処理のルール (Error Handling & Types)
+
+| No.       | 必須ルール             | 詳細（AIへの指示）                                                                                                             |
+| :-------- | :--------------------- | :----------------------------------------------------------------------------------------------------------------------------- |
+| **III-1** | **Throw 禁止**         | 例外を発生させる `throw` 文は禁止。                                                                                            |
+| **III-2** | **Try/Catch 禁止**     | `try / catch` の使用は、外部システムとの境界（腐敗防止層）でのみ許可し、それ以外のレイヤーでは禁止する。                       |
+| **III-3** | **非同期処理の型**     | `Promise` を直接返さず、必ず **`ResultAsync`** のような Result 型に寄せて、成功/失敗の結果を型で明示すること。                 |
+| **III-4** | **Zod safeParse 強制** | Zod ライブラリを使用する際、検証メソッドは `parse` ではなく、必ず **`safeParse`** を使用すること。                             |
+| **III-5** | **型アサーション禁止** | `as` や `!` (非 null アサーション) を使用した型アサーションを禁止する。必ず型ガード関数や適切なチェックで型を絞り込むこと。    |
+| **III-6** | **ネストの制限**       | 制御フロー（`if`, `for`, `while` など）のネストは深さ **1** までとし、早期リターン（ガード節）を用いてコードを平坦に保つこと。 |
+
+### 2.4. AI運用とテスト・品質ガード（Operational & AI-specific rules）
+
+| No.      | 必須ルール                                             | 詳細（AIへの指示）                                                                                                                                                                                                                                     |
+| :------- | :----------------------------------------------------- | :----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **IV-1** | **暗黙のフォールバック禁止 (No implicit fallback)**    | LLM による勝手な補完・暗黙のフォールバックを禁止します。欠損値や想定外の状態については、必ず明示的に失敗を返す（Result 型等）か、仕様として事前に定義されたフォールバックを適用してテストで検証してください。                                          |
+| **IV-2** | **ダミー/NO-OP 実装の禁止 (No mocking in production)** | プロダクション用コード内での NO-OP / ダミー実装を禁止します。テストでモックを使う場合でも、必ず"実 DB を用いた結合テスト"を作成し、モックのみで成功するケースを許容しないこと。                                                                        |
+| **IV-3** | **fail-fast の条件付き適用**                           | `fail-fast` を無条件に適用することを禁止します。fail-fast を採用する場合はリスク評価と回復戦略（リトライ、代替処理、監視/アラート）を明文化し、該当箇所を限定（例: 腐敗防止層）してテストで検証すること。                                              |
+| **IV-4** | **結合テスト重視・サーバー側実DB使用・カバレッジ目標** | サーバー側 API/Repository は「実 DB を用いた結合テスト」を必須とし、サーバー側コードのカバレッジは **100% を目標** とする（現実的制約がある場合は CI によるフル結合テストの夜間実行等の補完を許可）。                                                  |
+| **IV-5** | **TSDoc の厳格化**                                     | 公開 API、Repository メソッド、Server Actions、複雑な関数には必ず TSDoc を記述し、`目的 (purpose)`, `内容 (params/returns)`, `注意事項 (remarks)` を必須化する。日本語で記載し、@example を用いて使い方を示すこと。                                    |
+| **IV-6** | **CI と linter による自動阻止**                        | 上記ルールは文書化するだけでなく、CI と linter（ESLint + 各種プラグイン）で自動検出・阻止できる仕組みを必ず導入すること。PR マージ前にルール違反がある場合はブロックされるように設定する（TSDoc 必須チェック、禁止構文の検出、カバレッジゲートなど）。 |
+
+**運用メモ**:
+
+- ルールは必ず CI と lint で守らせる。単にルールを書くだけでは不十分。
+- テスト用モックは許されるが、その場合でも「モックでのみグリーンになるテスト」を許さず、実 DB を利用した結合テストを同等レベルで確保すること。
+
+### 2.5. 命名規則
 
 - **PascalCase:** コンポーネント名、インターフェース、型エイリアス。
 - **camelCase:** 変数、関数、メソッド。
@@ -36,7 +89,7 @@ trigger: always_on
 - **意味のある名前:** 変数名や関数名など、全ての命名においてその役割や目的が明確に分かるように、具体的かつ説明的な名前を選んでください。
 - **補助動詞:** `isLoading`, `hasError` のように、状態を表す変数は補助動詞を用いて説明的にします。
 
-### 2.2. TDD実行手順（AIへの依頼）
+### 2.6. TDD実行手順（AIへの依頼）
 
 AIは、選択した**細分化タスク**を完了させるため、以下のRGRサイクルを順に実行すること。
 
@@ -66,7 +119,7 @@ view関連のテストファイル名
 1.  テストがグリーンであることを前提に、生成したコードに対して**品質、可読性、効率**を高めるためのリファクタリングを提案・実行する。
 2.  リファクタリング後、**テストが引き続きグリーン**であることを最終確認し、\*\*タスクを完了（チェック）\*\*とする。
 
-### 2.3. コード生成の基本方針
+### 2.7. コード生成の基本方針
 
 - **レビューと理解:** コードを記述する前に、既存のコードを深くレビューし、その動作を正確に理解します。
 - **簡潔性と正確性:** 正確な例を用い、簡潔で技術的に正しいTypeScriptコードを記述します。
@@ -77,7 +130,7 @@ view関連のテストファイル名
 - **ファイルサイズ:** 1ファイルの行数は500行以内を目安とし、これを超える場合は適切にファイルを分割します。
 - **コンポーネントのエクスポート:** コンポーネントは名前付きエクスポート (`export const MyComponent = ...`) を使用します。
 
-### 2.4. ファイル・ディレクトリ構成
+### 2.8. ファイル・ディレクトリ構成
 
 重要: このプロジェクトでは「ルーティング（ページ）」と「コンポーネント（UI/ビジネスロジック）」を明確に分離し、さらにコンポーネントごとに責務を分けることで可読性とテスト容易性を高めます。以下は Qiita 記事の実践例に基づく具体ルールです。
 
@@ -164,7 +217,7 @@ view関連のテストファイル名
       [page-name].test.tsx        // ページコンポーネントのテストファイル (任意)
   ```
 
-### 2.5. Supabase / Drizzle の命名規約
+### 2.9. Supabase / Drizzle の命名規約
 
 - **公式ルール:** Supabase は Postgres を基盤としており、データベース識別子（データベース名・スキーマ名・テーブル名など）は [PostgreSQL の識別子仕様](https://www.postgresql.org/docs/current/sql-syntax-lexical.html#SQL-SYNTAX-IDENTIFIERS) に準拠します。未引用識別子は 63 文字以内で、アルファベットまたはアンダースコアで開始し、英数字もしくはアンダースコアのみを含めます。引用識別子は例外ですが、生成コードでは使用しません。
 - **運用方針:** Drizzle の `casing: 'snake_case'` 構成を利用し、テーブル・カラムは `snake_case` で統一します（参考: [Drizzle ドキュメント](https://orm.drizzle.team/docs/sql-schema-declaration#camel-and-snake-casing)）。
