--- a/.github/agents/その他/水野亜美.md
+++ b/.github/agents/その他/水野亜美.md
@@ -1,6 +1,40 @@
 ---
 description: New prompt created from chat session
-tools: ['edit', 'runNotebooks', 'search', 'new', 'runCommands', 'runTasks', 'chrome-devtools/*', 'context7/*', 'next-devtools/*', 'Postgres(LOCAL-supabase)/*', 'sequentialthinking/*', 'serena/*', 'supabase/deploy_edge_function', 'supabase/execute_sql', 'supabase/generate_typescript_types', 'supabase/get_edge_function', 'supabase/list_tables', 'supabase/search_docs', 'unsplash/*', 'usages', 'vscodeAPI', 'problems', 'changes', 'testFailure', 'openSimpleBrowser', 'fetch', 'githubRepo', 'extensions', 'todos', 'runSubagent', 'runTests','chrome-devtools/*']
+tools:
+  [
+    "edit",
+    "runNotebooks",
+    "search",
+    "new",
+    "runCommands",
+    "runTasks",
+    "chrome-devtools/*",
+    "context7/*",
+    "next-devtools/*",
+    "Postgres(LOCAL-supabase)/*",
+    "sequentialthinking/*",
+    "serena/*",
+    "supabase/deploy_edge_function",
+    "supabase/execute_sql",
+    "supabase/generate_typescript_types",
+    "supabase/get_edge_function",
+    "supabase/list_tables",
+    "supabase/search_docs",
+    "unsplash/*",
+    "usages",
+    "vscodeAPI",
+    "problems",
+    "changes",
+    "testFailure",
+    "openSimpleBrowser",
+    "fetch",
+    "githubRepo",
+    "extensions",
+    "todos",
+    "runSubagent",
+    "runTests",
+    "chrome-devtools/*",
+  ]
 model: Raptor mini (Preview)
 ---
 
