chore: pre-merge checks and updates

--- a/.agent/rules/ファイル・ディレクトリ構成.md
+++ b/.agent/rules/ファイル・ディレクトリ構成.md
@@ -4,7 +4,7 @@ trigger: always_on
 
 ## ファイル・ディレクトリ構成
 
-重要: このプロジェクトでは「ルーティング（ページ）」と「コンポーネント（UI/ビジネスロジック）」を明確に分離し、さらにコンポーネントごとに責務を分けることで可読性とテスト容易性を高めます。
+重要: このプロジェクトでは「ルーティング（ページ）」と「コンポーネント（UI/ビジネスロジック）」を明確に分離し、さらにコンポーネントごとに責務を分けることで可読性とテスト容易性を高めます。(バレルファイル)
 
 ### 1. ルーティングとコンポーネントの分離
 
