feat: migrate landing page to tales-claire edition and add purpose section

--- a/schedule/2026-01-11.md
+++ b/schedule/2026-01-11.md
@@ -29,7 +29,7 @@
 
 1. **オンボーディングとルートアカウント (優先度: 高)**
    - 認証フロー（Supabase Auth）の再確認。
-   - 初期セットアップ（地球3分割、活動時間、言語設定）の実装状況確認と不足分の実装。
+   - 初期セットアップ（地球3分割、活動時間、言語）の実装状況確認と不足分の実装。
    - **オアシス宣言**への同意フローの完全な実装（違反時のブラウジング制限など）。
 
 2. **ユーザープロフィール（千の仮面） (優先度: 高)**
