chore: Apply user feedback and update dependencies

--- a/.agent/rules/デザイン.md
+++ b/.agent/rules/デザイン.md
@@ -11,7 +11,9 @@ trigger: always_on
 * ライトモード（グラスモーフィズム）
 
 ```
-目的: Next.js/ReactのUIにライトモードのグラスモーフィズムを適用したい。既存UIのスタイルを段階的に置換し、再利用可能なコンポーネント/クラスを導入して保守性を高める。
+目的: Next.js/ReactのUIにライトモードのグラスモーフィズムを適用したい。
+※ デジタル庁UI (`デジタル庁UI.md`) のアクセシビリティ・構造思想を取り入れるが、**視覚的な装飾（Look & Feel）はグラスモーフィズムを採用**する。
+※ ただし、アクセシビリティ基準（コントラスト比 4.5:1以上）を優先し、可読性を損なうガラス表現は避ける。
 
 要件:
 - 背景: 明るい柔らかいグラデーション（例: from-white via-blue-50 to-purple-50）/ うっすらパターンOK
