--- a/.agent/rules/ファイル・ディレクトリ構成.md
+++ b/.agent/rules/ファイル・ディレクトリ構成.md
@@ -67,13 +67,13 @@ export default function SamplePage() {
 
 ### 4. データフェッチの配置原則
 
-| 項目               | ルール                                                             | 理由                         |
-| ------------------ | ------------------------------------------------------------------ | ---------------------------- |
-| **配置場所**       | `src/components/**/*.logic.ts` または `*.fetch.ts`                 | 機能単位で副作用を完結させる |
-| **ページ側**       | 原則フェッチ禁止（表示・組み立て専念）                             | テストとモックが容易         |
-| **例外**           | ページレベル集約が必要な場合のみ `page.tsx` に配置可（推奨しない） | 現実的制約への対応           |
-| **データ受け渡し** | props 経由を優先                                                   | 依存関係の明示化             |
-| **Server Actions** | 許容（責務はページ側で集約）                                       | Next.js のベストプラクティス |
+| 項目               | ルール                                                             | 理由                                                        |
+| ------------------ | ------------------------------------------------------------------ | ----------------------------------------------------------- |
+| **配置場所**       | `src/components/**/*.logic.ts` または `*.fetch.ts`                 | 機能単位で副作用を完結させる                                |
+| **ページ側**       | 原則フェッチ禁止（表示・組み立て専念）                             | テストとモックが容易                                        |
+| **例外**           | ページレベル集約が必要な場合のみ `page.tsx` に配置可（推奨しない） | 現実的制約への対応                                          |
+| **データ受け渡し** | props 経由を優先                                                   | 依存関係の明示化                                            |
+| **Server Actions** | **原則禁止** (REST API推奨)                                        | [セキュリティ基準](./ai_instruction_react_security.md) 準拠 |
 
 ### 5. 命名とエクスポート方針
 
