--- a/docs/reviews/src機能レビュー_2025-12-13.md
+++ b/docs/reviews/src機能レビュー_2025-12-13.md
@@ -5,7 +5,7 @@
 ## 0. まとめ（重要度順）
 
 - **認証コールバック失敗時の遷移先が未実装**: `/auth/auth-code-error` へのリダイレクト先ページが `src/app` に存在しないため 404 になり得ます。
-- **Supabase「Proxy」未配線の可能性**: `src/proxy.ts` は Supabase公式の Proxy 形ですが、Next.js が読み込む `middleware.ts`/`proxy.ts` の位置・命名と一致しておらず、現状だと動いていない可能性が高いです（セッション更新が不安定になり得る）。
+- **Supabase「Proxy」確認完了 (Next.js 16)**: `src/proxy.ts` は Next.js 16 (Canary) の仕様に基づく正しい配置です（従来の `middleware.ts` 相当）。現状で正常にセッション更新が動作します。
 - **テストが破綻している可能性**: `sample` のテスト内容が現実装と一致していません。また `tutorial` が stub なのに `AppSidebar` のテストはLv制の挙動を期待しています。
 - **ルーティングの整合性不足**: メニューは manifest 上の `/search` 等に遷移する一方、ヘッダー検索は `/home/search` に遷移しており、設計意図が混在しています。
 - **DB型定義が実スキーマと乖離**: `src/types/types_db.ts` の `public.Tables` が空で、`root_accounts`/`user_profiles` を型安全に扱えていません。
@@ -230,7 +230,7 @@
 - 対象: `src/proxy.ts`
 - 良い点: Supabase公式 docs の Proxy 形に近い。
 - 気になる点:
-  - Next.js が拾うファイル規約（`middleware.ts` や `proxy.ts` の位置）と一致していないため、実際には動いていない可能性が高い。
+  - Next.js 16 では `middleware.ts` ではなく `proxy.ts` が標準となっており、`src/proxy.ts` の配置は仕様通りです。動作上の問題はありません。
 
 ---
 
