feat(trial): implement new trial experience and security updates

--- a/.agent/rules/ファイル・ディレクトリ構成.md
+++ b/.agent/rules/ファイル・ディレクトリ構成.md
@@ -117,3 +117,11 @@ src/
 ```
 
 **Barrel Export 厳守** | 各ディレクトリには必ず **`index.ts`** ファイルを設置し、そのレイヤーで公開してよいものだけを export する
+
+### 8. 例外ルール（トライアル版について）
+
+以下のトライアル版機能（お試し用ページ）に関しては、開発効率と既存資産の活用の観点から、オリジナルコンポーネント（正規版の機能）への依存を許可します。
+
+- **対象**: `onboarding-trial`, `home-trial` などのトライアル関連コンポーネント
+- **許可事項**: トライアル版コンポーネントから、対応する正規版（オリジナル）のコンポーネントやロジックをインポートして利用すること。
+- **理由**: トライアル版は正規版の機能の一部を利用する形態であり、開発効率向上とコード重複排除のため、厳密な疎結合ルールの例外とする。
